[gd_scene load_steps=8 format=3 uid="uid://bvukxdsjcyqrq"]

[ext_resource type="Script" path="res://jsh_player_controller.gd" id="1_r83mk"]
[ext_resource type="Script" path="res://words_in_space_3d.gd" id="2_mnl7f"]
[ext_resource type="Script" path="res://jsh_player_gui.gd" id="3_4c6rj"]
[ext_resource type="Script" path="res://main_scene_controller.gd" id="4_wyf3e"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jeo8c"]
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4wqyu"]
transparency = 1
albedo_color = Color(0.345098, 0.627451, 0.847059, 0.501961)
emission_enabled = true
emission = Color(0.156863, 0.309804, 0.596078, 1)
emission_energy_multiplier = 0.5

[sub_resource type="Environment" id="Environment_rquxt"]
background_mode = 1
background_color = Color(0.0784314, 0.0862745, 0.109804, 1)
ambient_light_color = Color(0.301961, 0.301961, 0.301961, 1)
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.0784314, 0.0862745, 0.109804, 1)
fog_density = 0.001
volumetric_fog_enabled = true
volumetric_fog_density = 0.01

[node name="MainScene" type="Node3D"]
script = ExtResource("4_wyf3e")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_r83mk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_jeo8c")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
current = true
fov = 75.0

[node name="FlightParticles" type="CPUParticles3D" parent="Player/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
emitting = false
amount = 128
lifetime = 0.75
randomness = 0.2
local_coords = true
emission_shape = 1
emission_sphere_radius = 0.5
direction = Vector3(0, 0, -1)
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 5.0
scale_amount_min = 0.1
scale_amount_max = 0.3
color = Color(0.192157, 0.611765, 0.956863, 1)

[node name="RayCast3D" type="RayCast3D" parent="Player/Camera3D"]
target_position = Vector3(0, 0, -10)
collision_mask = 4
collide_with_areas = true
debug_shape_custom_color = Color(0.886275, 0.254902, 0.462745, 1)
debug_shape_thickness = 5

[node name="AuraEffect" type="CSGSphere3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
visible = false
radius = 1.0
material = SubResource("StandardMaterial3D_4wqyu")

[node name="WordsInSpace3D" type="Node3D" parent="."]
script = ExtResource("2_mnl7f")
grid_size = Vector3(20, 10, 20)
cell_size = 2.0
use_colors = true
display_connections = true
connection_width = 0.075

[node name="GUI" type="CanvasLayer" parent="."]

[node name="PlayerGUI" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_4c6rj")

[node name="StatusPanel" type="Panel" parent="GUI/PlayerGUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 160.0
grow_horizontal = 0

[node name="ModeLabel" type="Label" parent="GUI/PlayerGUI/StatusPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Mode: WALKING"

[node name="RealityLabel" type="Label" parent="GUI/PlayerGUI/StatusPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 36.0
offset_right = -10.0
offset_bottom = 62.0
grow_horizontal = 2
text = "Reality: PHYSICAL"

[node name="EnergyBar" type="ProgressBar" parent="GUI/PlayerGUI/StatusPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 70.0
offset_right = -10.0
offset_bottom = 97.0
grow_horizontal = 2
value = 100.0
show_percentage = false

[node name="EnergyLabel" type="Label" parent="GUI/PlayerGUI/StatusPanel/EnergyBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Energy: 100%"
horizontal_alignment = 1

[node name="WordInfoPanel" type="Panel" parent="GUI/PlayerGUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -280.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="Title" type="Label" parent="GUI/PlayerGUI/WordInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Word Information"
horizontal_alignment = 1

[node name="WordContent" type="Label" parent="GUI/PlayerGUI/WordInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = 66.0
grow_horizontal = 2
text = "No word selected"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/PlayerGUI/WordInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 70.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="WordDetails" type="VBoxContainer" parent="GUI/PlayerGUI/WordInfoPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NotificationPanel" type="Panel" parent="GUI/PlayerGUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="NotificationLabel" type="Label" parent="GUI/PlayerGUI/NotificationPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Welcome to JSH Ethereal Engine"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConsolePanel" type="Panel" parent="GUI/PlayerGUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="ConsoleLineEdit" type="LineEdit" parent="GUI/PlayerGUI/ConsolePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter command..."
context_menu_enabled = false
clear_button_enabled = true
caret_blink = true

[node name="CrosshairLabel" type="Label" parent="GUI/PlayerGUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rquxt")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
light_energy = 0.8
shadow_enabled = true